--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Argument supporting API",
+  "name": "ArgumentSupportingAPI",
   "version": "1.0.0",
   "description": "Argument supporting API",
   "main": "index.js",
